--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
-  "name": "@uniswap/v2-periphery",
-  "version": "1.1.0-beta.0",
-  "description": "🎚 Peripheral smart contracts for interacting with Uniswap V2",
+  "name": "@lobanov/uniswap-v2-periphery",
+  "version": "2.0.0",
+  "description": "Forked Uniswap V2 Peripheral smart contracts",
   "engines": {
     "node": ">=10"
   },
   "homepage": "https://uniswap.org",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Uniswap/uniswap-v2-periphery"
+    "url": "https://github.com/lobanov/uniswap-v2-periphery"
   },
   "files": [
     "build",
     "contracts"
   ],
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
   "dependencies": {
     "@uniswap/lib": "4.0.1-alpha",
-    "@uniswap/v2-core": "1.0.0"
+    "@uniswap/v2-core": "npm:@lobanov/uniswap-v2-core@2.0.1"
   },
   "devDependencies": {
     "@types/chai": "^4.2.6",
